sludge.css
* {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	border: none;
	margin: 0;
	padding: 0
}

html {
	background: #f9f9f9
}

.left {
	float: left
}

.right {
	float: right
}

.container {
	display: flex;
	width: 100%
}

.container div {
    flex: 1;
}

.cell {
	padding: 5px;
}

.item {
}

.button {
    background-color: #4CAF50;
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
	position: relative;
	border-radius:4px;
}

.glyph {
	cursor: pointer;
}

.upload input {
	opacity: 0;
	position: absolute;
	right: 0px;
	top: 0px;
	line-height: 48px;
	width: 100%;
}

